test/error/missing_endtask.sv
// pattern: missing expected `endtask`
module top;
    task automatic foo;
        input inp;
endmodule
